Bug 105229 - [KBL SKL BDW HSW] [Regression] KHR-GLES31.core.shader_image_load_store.advanced-sso-simple failures
Summary: [KBL SKL BDW HSW] [Regression] KHR-GLES31.core.shader_image_load_store.advanc...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Mathias Fröhlich
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-02-23 17:16 UTC by Clayton Craft
Modified: 2018-02-23 21:45 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Clayton Craft 2018-02-23 17:16:02 UTC
The following failures started to show up in Mesa CI after mesa commit 4562a7b0e82bf664b30ee72da141d070adc659da:

KHR-GLES31.core.shader_image_load_store.advanced-sso-simple.kblm64
KHR-GLES31.core.shader_image_load_store.advanced-sso-simple.sklm64
KHR-GLES31.core.shader_image_load_store.advanced-sso-simple.bdwm64
KHR-GLES31.core.shader_image_load_store.advanced-sso-simple.hswm64

Output from failing test:
    glcts: ../src/mesa/main/state.c:191: update_program: Assertion `VP_MODE_FF == ctx->VertexProgram._VPMode' failed.
Comment 1 Mathias Fröhlich 2018-02-23 20:54:13 UTC
Commit b54bf0e3e3378725dec924f8152dcb012dffcd2e fixes the mentioned test on my skylake system. Can you recheck?
Thanks!
Mathias
Comment 2 Clayton Craft 2018-02-23 21:45:13 UTC
Confirmed that b54bf0e3e33 fixes these tests, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.